<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OpenedRecipeActivity">


    <View
        android:id="@+id/content_header"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@drawable/container_header"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tv_opened_recipe_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/opened_recipe_title"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/content_header"
        app:layout_constraintStart_toStartOf="@id/content_header"
        app:layout_constraintTop_toTopOf="@id/content_header"
        tools:ignore="TextContrastCheck"
        />

    <TextView
        android:id="@+id/tv_recipe_title"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="45dp"
        android:text="@string/et_recipe_title"
        android:textColor="@color/dark_blue"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_opened_recipe_title"
        />

    <TextView
        android:id="@+id/tv_recipe_ingredients"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="70dp"
        android:text="@string/et_recipe_ingredients"
        android:textColor="@color/dark_blue"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_recipe_title"
        />

    <TextView
        android:id="@+id/tv_recipe_cook_method"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="70dp"
        android:text="@string/et_recipe_cook_method"
        android:textColor="@color/dark_blue"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_recipe_ingredients"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_back"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="75dp"
        android:background="@drawable/round_button"
        android:drawableStart="@drawable/ic_baseline_arrow_back_50"
        android:paddingStart="11dp"
        android:paddingEnd="11dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:ignore="SpeakableTextPresentCheck"
        />

</androidx.constraintlayout.widget.ConstraintLayout>